--- a/.github/workflows/matrix-reusable.yml
+++ b/.github/workflows/matrix-reusable.yml
@@ -11,4 +11,5 @@ jobs:
       run: echo ${{ matrix.machine }}
 
     - name: printando apenas a primeira maquina
+      if: ${{ contains(matrix.machine, "b3ftrd01") }}
       run: echo ${{ contains(matrix.machine, 'b3ftrd01') }}
