--- a/.github/workflows/matrix-reusable.yml
+++ b/.github/workflows/matrix-reusable.yml
@@ -20,11 +20,11 @@ jobs:
 #      run: |
 #        echo "${{ inputs.machine_name }}"
 
-  voice:
-    name: job de voice (01)
-    runs-on: ubuntu-latest
-    if: ${{ contains(inputs.machine_name, 'b3ftrd01') }}
-    steps:
-    - name: printando a maquina
-      run: |
-        echo "voice caraio"
+#  voice:
+#    name: job de voice (01)
+#    runs-on: ubuntu-latest
+#    if: ${{ contains(inputs.machine_name, 'b3ftrd01') }}
+#    steps:
+#    - name: printando a maquina
+#      run: |
+#        echo "voice caraio"
